ex2/testdata/parser/error/TestCases-error-st-exp=exp - Copy (4).java
/**
 * Created by alka on 5/11/2017.
 */
class TestCaseserror {
    public static void main(String [] args)
    {
        int v;
        v=10;
 
	if (1<v<100)
        {

        }
        else
        {

        }
    }
}
